--- a/Frontend/src/app/modules/invoices/components/invoices/invoices.component.html
+++ b/Frontend/src/app/modules/invoices/components/invoices/invoices.component.html
@@ -12,29 +12,33 @@
   >
     <thead>
       <tr>
-        <th>Dept ID</th>
-        <th>Dept Name</th>
-        <th>Ranking</th>
-        <th>Status</th>
+        <th>Invoice Id</th>
+        <th>Invoice Title</th>
+        <th>Invoice Description</th>
+        <th>Attachments</th>
+        <th>Amount</th>
+        <th>Tax Percentage</th>
+        <th>Grand Total</th>
         <th>Created Date</th>
         <th>Created By</th>
-        <th>Update Date</th>
-        <th>Update By</th>
-        <th>Dept Code</th>
-        <th>Actions</th>
+        <th>Updated Date</th>
+        <th>Updated By</th>
+        <th>Invoice Details Id</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let data of basicTable.data">
-        <td>{{ data.department_id }}</td>
-        <td>{{ data.department_name }}</td>
-        <td>{{ data.ranking }}</td>
-        <td>{{ data.status }}</td>
-        <td>{{ data.created_date }}</td>
-        <td>{{ data.created_by }}</td>
-        <td>{{ data.updated_date }}</td>
-        <td>{{ data.updated_by }}</td>
-        <td>{{ data.department_code }}</td>
+        <td>{{ data.invoice_id }}</td>
+        <td>{{ data.invoice_title }}</td>
+        <td>{{ data.invoice_description }}</td>
+        <td>{{ data.attachments }}</td>
+        <td>{{ data.amount}}</td>
+        <td>{{ data.tax_percentage}}</td>
+        <td>{{ data.created_date}}</td>
+        <td>{{ data.created_by}}</td>
+        <td>{{ data.updated_date}}</td>
+        <td>{{ data.updated_by}}</td>
+        <td>{{ data.invoice_details_id}}</td>
         <td>
           <button nz-button nzType="primary" (click)="edit(data)">Edit</button>
         </td>
@@ -51,78 +55,22 @@
   [nzFooter]="footerTpl"
   (nzOnClose)="close()"
 >
-  <form nz-form *nzDrawerContent [formGroup]="departmentform">
-    <div>
-      <nz-form-item>
-        <nz-form-label nz-col nzSpan="5">Dept ID</nz-form-label>
-        <nz-form-control nz-col nzSpan="10">
-          <input
-            nz-input
-            formControlName="department_id"
-            placeholder="please enter Department ID"
-          />
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-    <div>
-      <nz-form-item>
-        <nz-form-label nz-col nzSpan="5">Department Name</nz-form-label>
-        <nz-form-control nz-col nzSpan="10">
-          <input
-            nz-input
-            formControlName="department_name"
-            type="text"
-            nz-input
-            placeholder="please enter Department Name"
-          />
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-
-    <div>
-      <nz-form-item>
-        <nz-form-label nz-col nzSpan="5">Ranking</nz-form-label>
-        <nz-form-control nz-col nzSpan="10">
-          <input
-            nz-input
-            formControlName="ranking"
-            type="number"
-            nz-input
-            placeholder="please enter Rank"
-          />
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-
-    <div>
-      <nz-form-item>
-        <nz-form-label nz-col nzSpan="5">Status</nz-form-label>
-        <nz-form-control nz-col nzSpan="10">
-          <input
-            nz-input
-            formControlName="status"
-            type="text"
-            nz-input
-            placeholder="please enter Status"
-          />
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-
-    <div>
-      <nz-form-item>
-        <nz-form-label nz-col nzSpan="5">Department Code</nz-form-label>
-        <nz-form-control nz-col nzSpan="10">
-          <input
-            nz-input
-            formControlName="department_code"
-            type="text"
-            nz-input
-            placeholder="please enter Department code"
-          />
-        </nz-form-control>
-      </nz-form-item>
-    </div>
+  <form nz-form *nzDrawerContent [formGroup]="invoiceForm">
+    <div *ngFor="let val of formArray">
+        <div>
+          <nz-form-item>
+            <nz-form-label nz-col nzSpan="5" >{{val.label}}</nz-form-label>
+            <nz-form-control nz-col nzSpan="10">
+              <input 
+                nz-input
+                formControlName={{val.control}}
+                placeholder="please enter {{val.holder}}"
+              />
+            </nz-form-control>
+          </nz-form-item>
+        </div>
+  </div>
+    
   </form>
 
   <ng-template #footerTpl>
