--- a/Frontend/src/app/layouts/home/home.component.css
+++ b/Frontend/src/app/layouts/home/home.component.css
@@ -1,17 +1,5 @@
-
-
-.header-menu {
-  line-height: 64px;
-}
-
-.sider-menu {
-  height: 100%;
-  border-right: 0;
-}
-
 .inner-layout {
   padding: 0px 12px;
-
 }
 
 nz-breadcrumb {
@@ -26,60 +14,52 @@ nz-content {
 nz-header {
   background: white;
   border-bottom: 1px solid gainsboro;
-  padding:0px 10px;
+  padding: 0px 10px;
   position: sticky;
   top: 0;
   z-index: 2;
-  }
-  .logo {
-    height: 32px;
-    background: rgba(255, 255, 255, 0.2);
-    margin: 16px;
-    position: relative;
-  }
-  .image{
-    height:40px;
-    width:40px;
-  }
-  .logo h1{
-    position: absolute;
-    left: auto;
-    right: auto;
-  }
-.para{
+}
+.logo {
+  height: 32px;
+  background: rgba(255, 255, 255, 0.2);
+  margin: 16px;
+  /* position: sticky;
+    top: 0; */
+}
+.image {
+  height: 40px;
+  width: 40px;
+}
+
+.para {
   color: black;
-  font-family:"Fantasy";
-  font-size:20px;
+  font-family: "Fantasy";
+  font-size: 20px;
 }
 .layout {
   min-height: auto;
 }
 
 nz-sider {
-
-  height: auto;
+  height: 100vh;
   position: sticky;
   left: 0;
   top: 0;
 }
-::ng-deep .ant-layout-sider-children {
-  position: fixed;
-  top: 0;
-}
-.b1{
-  font-size:25px;
-  padding:10px;
-  border-radius:5px;
-}
-.b1:hover{
-  background-color:pink;
-}
-.list{
-  width:200px;
 
+.b1 {
+  font-size: 25px;
+  padding: 10px;
+  border-radius: 5px;
 }
-.item{
-  height:50px;
+.b1:hover {
+  background-color: pink;
+}
+.list {
+  width: 200px;
+}
+.item {
+  height: 50px;
 }
 /* .inner-header{
   background: none;
@@ -90,7 +70,7 @@ nz-sider {
 .trigger {
   font-size: 18px;
   line-height: 64px;
-  padding: 0 24px;
+  padding: 0px;
   cursor: pointer;
   transition: color 0.3s;
 }
@@ -99,22 +79,22 @@ nz-sider {
   color: #1890ff;
 }
 
-[nz-icon]{
+[nz-icon] {
   font-size: larger;
 }
-.avatar{
-  padding-left:15px;
-  display:flex;
+.avatar {
+  padding-left: 15px;
+  display: flex;
   flex-direction: row;
 }
-.stat{
-  background-color:lightgreen;
+.stat {
+  background-color: lightgreen;
   color: black;
-  padding:3px;
-  border-radius:10px;
+  padding: 3px;
+  border-radius: 10px;
 }
 
-.av1{
-  display:flex;
+.av1 {
+  display: flex;
   flex-direction: column;
 }
