--- a/Frontend/src/app/modules/department/components/department-list/department-list.component.html
+++ b/Frontend/src/app/modules/department/components/department-list/department-list.component.html
@@ -7,6 +7,9 @@
   <nz-breadcrumb-item>Departments</nz-breadcrumb-item>
 </nz-breadcrumb>
 <nz-content>
+  <nz-input-group >
+    <input type="text" nz-input placeholder="input search text" [(ngModel)]="searchText"/>
+  </nz-input-group>
   <div class="cbutton">
     <button nz-button nzType="default" (click)="open()">Create</button>
   </div>
@@ -30,7 +33,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let data of basicTable.data">
+      <tr *ngFor="let data of basicTable.data  | globalTablesearch: searchText ">
         <td>{{ data.department_id }}</td>
         <td>{{ data.department_name }}</td>
         <td>{{ data.ranking }}</td>
